--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,14 @@
 #                                            #
 ##############################################
 
+DEFAULT_PCI_OS_AUTOINSTALL=1
+DEFAULT_PCI_OS_DISTRIBUTION="debian10"
+
+DEFAULT_PCI_DOCKER_AUTOINSTALL=1
 DEFAULT_PCI_DOCKER_COMPOSE_VERSION=1.19.0;
 DEFAULT_PCI_DOCKER_COMPOSE_PATH="/usr/local/bin/docker-compose";
 
+DEFAULT_PCS_AUTOINSTALL=1
 DEFAULT_PCS_DEVICE_NAME="/dev/sdb";
 DEFAULT_PCS_DEVICE_UNIT=1;
 DEFAULT_PCS_DEVICE_MOUNT_PATH="/mnt/containers/"
