--- a/.env.example
+++ b/.env.example
@@ -12,19 +12,19 @@ DEFAULT_PCI_OS_AUTOINSTALL=1
 DEFAULT_PCI_OS_DISTRIBUTION="debian10"
 
 DEFAULT_PCI_DOCKER_AUTOINSTALL=1
-DEFAULT_PCI_DOCKER_COMPOSE_VERSION=1.19.0;
-DEFAULT_PCI_DOCKER_COMPOSE_PATH="/usr/local/bin/docker-compose";
+DEFAULT_PCI_DOCKER_COMPOSE_VERSION=1.19.0
+DEFAULT_PCI_DOCKER_COMPOSE_PATH="/usr/local/bin/docker-compose"
 
 DEFAULT_PCS_AUTOINSTALL=1
-DEFAULT_PCS_DEVICE_NAME="/dev/sdb";
-DEFAULT_PCS_DEVICE_UNIT=1;
+DEFAULT_PCS_DEVICE_NAME="/dev/sdb"
+DEFAULT_PCS_DEVICE_UNIT=1
 DEFAULT_PCS_DEVICE_MOUNT_PATH="/mnt/containers/"
 
 DEFAULT_CONTAINER_WEBPROXY_AUTOINSTALL=1
 DEFAULT_CONTAINER_WEBPROXY_NAME="docker-proxy"
 DEFAULT_CONTAINER_WEBPROXY_PATH="/mnt/containers/"
-DEFAULT_CONTAINER_WEBPROXY_EMAIL="email@domain.tld";
-DEFAULT_CONTAINER_WEBPROXY_IP=0.0.0.0;
+DEFAULT_CONTAINER_WEBPROXY_EMAIL="email@domain.tld"
+DEFAULT_CONTAINER_WEBPROXY_IP=0.0.0.0
 
 DEFAULT_CONTAINER_WORDPRESS_AUTOINSTALL=1
 DEFAULT_CONTAINER_WORDPRESS_NAME="docker-wordpress"
