--- a/.env.example
+++ b/.env.example
@@ -21,15 +21,16 @@ DEFAULT_PCS_DEVICE_UNIT=1
 DEFAULT_PCS_DEVICE_MOUNT_PATH="/mnt/containers/"
 
 DEFAULT_CONTAINER_WEBPROXY_AUTOINSTALL=1
+DEFAULT_CONTAINER_WEBPROXY_GIT="https://github.com/evertramos/nginx-proxy-automation.git"
 DEFAULT_CONTAINER_WEBPROXY_NAME="docker-proxy"
-DEFAULT_CONTAINER_WEBPROXY_PATH="/mnt/containers/"
-DEFAULT_CONTAINER_WEBPROXY_EMAIL="email@domain.tld"
+DEFAULT_CONTAINER_WEBPROXY_EMAIL="user@domain.tld"
 DEFAULT_CONTAINER_WEBPROXY_IP=0.0.0.0
+DEFAULT_CONTAINER_WEBPROXY_NETWORK="proxy"
 
 DEFAULT_CONTAINER_WORDPRESS_AUTOINSTALL=1
+DEFAULT_CONTAINER_WORDPRESS_GIT="https://github.com/evertramos/docker-wordpress.git"
 DEFAULT_CONTAINER_WORDPRESS_NAME="docker-wordpress"
-DEFAULT_CONTAINER_WORDPRESS_PATH="/mnt/containers/"
 
 DEFAULT_CONTAINER_NEXTCLOUD_AUTOINSTALL=1
+DEFAULT_CONTAINER_WORDPRESS_GIT=""
 DEFAULT_CONTAINER_NEXTCLOUD_NAME="docker-nextcloud"
-DEFAULT_CONTAINER_NEXTCLOUD_PATH="/mnt/containers/"
