--- a/.env.example
+++ b/.env.example
@@ -9,28 +9,39 @@
 ##############################################
 
 DEFAULT_PCI_OS_AUTOINSTALL=1
-DEFAULT_PCI_OS_DISTRIBUTION="debian10"
+DEFAULT_PCI_OS_DISTRIBUTION='debian10'
 
 DEFAULT_PCI_DOCKER_AUTOINSTALL=1
 DEFAULT_PCI_DOCKER_COMPOSE_VERSION=1.19.0
-DEFAULT_PCI_DOCKER_COMPOSE_PATH="/usr/local/bin/docker-compose"
+DEFAULT_PCI_DOCKER_COMPOSE_PATH='/usr/local/bin/docker-compose'
 
 DEFAULT_PCS_AUTOINSTALL=1
-DEFAULT_PCS_DEVICE_NAME="/dev/sdb"
+DEFAULT_PCS_DEVICE_NAME='/dev/sdb'
 DEFAULT_PCS_DEVICE_UNIT=1
-DEFAULT_PCS_DEVICE_MOUNT_PATH="/mnt/containers/"
+DEFAULT_PCS_DEVICE_MOUNT_PATH='/mnt/containers/'
 
 DEFAULT_CONTAINER_WEBPROXY_AUTOINSTALL=1
-DEFAULT_CONTAINER_WEBPROXY_GIT="https://github.com/evertramos/nginx-proxy-automation.git"
-DEFAULT_CONTAINER_WEBPROXY_NAME="docker-proxy"
-DEFAULT_CONTAINER_WEBPROXY_EMAIL="user@domain.tld"
+DEFAULT_CONTAINER_WEBPROXY_GIT='https://github.com/evertramos/nginx-proxy-automation.git'
+DEFAULT_CONTAINER_WEBPROXY_NAME='docker-proxy'
+DEFAULT_CONTAINER_WEBPROXY_EMAIL='user@domain.tld'
 DEFAULT_CONTAINER_WEBPROXY_IP=0.0.0.0
-DEFAULT_CONTAINER_WEBPROXY_NETWORK="proxy"
+DEFAULT_CONTAINER_WEBPROXY_NETWORK='proxy'
 
 DEFAULT_CONTAINER_WORDPRESS_AUTOINSTALL=1
-DEFAULT_CONTAINER_WORDPRESS_GIT="https://github.com/evertramos/docker-wordpress.git"
-DEFAULT_CONTAINER_WORDPRESS_NAME="docker-wordpress"
+DEFAULT_CONTAINER_WORDPRESS_GIT='https://github.com/evertramos/docker-wordpress.git'
+DEFAULT_CONTAINER_WORDPRESS_NAME='docker-wordpress'
+DEFAULT_CONTAINER_WORDPRESS_LOGSMAXSIZE='200k'
+DEFAULT_CONTAINER_WORDPRESS_SITE_DOMAINS='domain.tld,www.domain.tld'
+DEFAULT_CONTAINER_WORDPRESS_SITE_IMAGE='wordpress'
+DEFAULT_CONTAINER_WORDPRESS_SITE_VERSION='lastest'
+DEFAULT_CONTAINER_WORDPRESS_DB_IMAGE='mariadb'
+DEFAULT_CONTAINER_WORDPRESS_DB_VERSION='latest'
+DEFAULT_CONTAINER_WORDPRESS_DB_DATABASE='wordpress'
+DEFAULT_CONTAINER_WORDPRESS_DB_PREFIX='wp_'
+DEFAULT_CONTAINER_WORDPRESS_DB_USERNAME='wordpress'
+DEFAULT_CONTAINER_WORDPRESS_DB_USERPASS='userpass'
+DEFAULT_CONTAINER_WORDPRESS_DB_ROOTPASS='rootpass'
 
 DEFAULT_CONTAINER_NEXTCLOUD_AUTOINSTALL=1
-DEFAULT_CONTAINER_WORDPRESS_GIT=""
-DEFAULT_CONTAINER_NEXTCLOUD_NAME="docker-nextcloud"
+DEFAULT_CONTAINER_NEXTCLOUD_GIT=''
+DEFAULT_CONTAINER_NEXTCLOUD_NAME='docker-nextcloud'
