--- a/.env.example
+++ b/.env.example
@@ -22,18 +22,18 @@ DEFAULT_PCS_DEVICE_MOUNT_PATH='/mnt/containers/'
 
 DEFAULT_CONTAINER_WEBPROXY_AUTOINSTALL=1
 DEFAULT_CONTAINER_WEBPROXY_GIT='https://github.com/evertramos/nginx-proxy-automation.git'
-DEFAULT_CONTAINER_WEBPROXY_NAME='docker-proxy'
+DEFAULT_CONTAINER_WEBPROXY_NAME='webproxy'
 DEFAULT_CONTAINER_WEBPROXY_EMAIL='user@domain.tld'
 DEFAULT_CONTAINER_WEBPROXY_IP=0.0.0.0
 DEFAULT_CONTAINER_WEBPROXY_NETWORK='proxy'
 
 DEFAULT_CONTAINER_WORDPRESS_AUTOINSTALL=1
 DEFAULT_CONTAINER_WORDPRESS_GIT='https://github.com/evertramos/docker-wordpress.git'
-DEFAULT_CONTAINER_WORDPRESS_NAME='docker-wordpress'
+DEFAULT_CONTAINER_WORDPRESS_NAME='wordpress'
 DEFAULT_CONTAINER_WORDPRESS_LOGSMAXSIZE='200k'
 DEFAULT_CONTAINER_WORDPRESS_SITE_DOMAINS='domain.tld,www.domain.tld'
 DEFAULT_CONTAINER_WORDPRESS_SITE_IMAGE='wordpress'
-DEFAULT_CONTAINER_WORDPRESS_SITE_VERSION='lastest'
+DEFAULT_CONTAINER_WORDPRESS_SITE_VERSION='latest'
 DEFAULT_CONTAINER_WORDPRESS_DB_IMAGE='mariadb'
 DEFAULT_CONTAINER_WORDPRESS_DB_VERSION='latest'
 DEFAULT_CONTAINER_WORDPRESS_DB_DATABASE='wordpress'
@@ -43,5 +43,15 @@ DEFAULT_CONTAINER_WORDPRESS_DB_USERPASS='userpass'
 DEFAULT_CONTAINER_WORDPRESS_DB_ROOTPASS='rootpass'
 
 DEFAULT_CONTAINER_NEXTCLOUD_AUTOINSTALL=1
-DEFAULT_CONTAINER_NEXTCLOUD_GIT=''
-DEFAULT_CONTAINER_NEXTCLOUD_NAME='docker-nextcloud'
+DEFAULT_CONTAINER_NEXTCLOUD_GIT='https://github.com/evertramos/docker-nextcloud-letsencrypt.git'
+DEFAULT_CONTAINER_NEXTCLOUD_NAME='nextcloud'
+DEFAULT_CONTAINER_NEXTCLOUD_SITE_DOMAIN='cloud.domain.tld'
+DEFAULT_CONTAINER_NEXTCLOUD_SITE_IMAGE='nextcloud'
+DEFAULT_CONTAINER_NEXTCLOUD_SITE_VERSION='latest'
+DEFAULT_CONTAINER_NEXTCLOUD_DB_IMAGE='mariadb'
+DEFAULT_CONTAINER_NEXTCLOUD_DB_VERSION='latest'
+DEFAULT_CONTAINER_NEXTCLOUD_DB_DATABASE='nextcloud'
+DEFAULT_CONTAINER_NEXTCLOUD_DB_PREFIX='nx_'
+DEFAULT_CONTAINER_NEXTCLOUD_DB_USERNAME='nextcloud'
+DEFAULT_CONTAINER_NEXTCLOUD_DB_USERPASS='userpass'
+DEFAULT_CONTAINER_NEXTCLOUD_DB_ROOTPASS='rootpass'
