--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,8 @@ DEFAULT_CONTAINER_NEXTCLOUD_NAME='nextcloud'
 DEFAULT_CONTAINER_NEXTCLOUD_SITE_DOMAIN='cloud.domain.tld'
 DEFAULT_CONTAINER_NEXTCLOUD_SITE_IMAGE='nextcloud'
 DEFAULT_CONTAINER_NEXTCLOUD_SITE_VERSION='latest'
+DEFAULT_CONTAINER_NEXTCLOUD_SITE_ADMINNAME='adminname'
+DEFAULT_CONTAINER_NEXTCLOUD_SITE_ADMINPASS='adminpass'
 DEFAULT_CONTAINER_NEXTCLOUD_DB_IMAGE='mariadb'
 DEFAULT_CONTAINER_NEXTCLOUD_DB_VERSION='latest'
 DEFAULT_CONTAINER_NEXTCLOUD_DB_DATABASE='nextcloud'
