Fixes stables revisions versions of applications

--- a/.env.example
+++ b/.env.example
@@ -33,9 +33,9 @@ DEFAULT_CONTAINER_WORDPRESS_NAME='wordpress'
 DEFAULT_CONTAINER_WORDPRESS_LOGSMAXSIZE='200k'
 DEFAULT_CONTAINER_WORDPRESS_SITE_DOMAINS='domain.tld,www.domain.tld'
 DEFAULT_CONTAINER_WORDPRESS_SITE_IMAGE='wordpress'
-DEFAULT_CONTAINER_WORDPRESS_SITE_VERSION='latest'
+DEFAULT_CONTAINER_WORDPRESS_SITE_VERSION='5.8.1'
 DEFAULT_CONTAINER_WORDPRESS_DB_IMAGE='mariadb'
-DEFAULT_CONTAINER_WORDPRESS_DB_VERSION='latest'
+DEFAULT_CONTAINER_WORDPRESS_DB_VERSION='10.5'
 DEFAULT_CONTAINER_WORDPRESS_DB_DATABASE='wordpress'
 DEFAULT_CONTAINER_WORDPRESS_DB_PREFIX='wp_'
 DEFAULT_CONTAINER_WORDPRESS_DB_USERNAME='wordpress'
@@ -47,11 +47,11 @@ DEFAULT_CONTAINER_NEXTCLOUD_GIT='https://github.com/evertramos/docker-nextcloud-
 DEFAULT_CONTAINER_NEXTCLOUD_NAME='nextcloud'
 DEFAULT_CONTAINER_NEXTCLOUD_SITE_DOMAIN='cloud.domain.tld'
 DEFAULT_CONTAINER_NEXTCLOUD_SITE_IMAGE='nextcloud'
-DEFAULT_CONTAINER_NEXTCLOUD_SITE_VERSION='latest'
+DEFAULT_CONTAINER_NEXTCLOUD_SITE_VERSION='22.1.1'
 DEFAULT_CONTAINER_NEXTCLOUD_SITE_ADMINNAME='adminname'
 DEFAULT_CONTAINER_NEXTCLOUD_SITE_ADMINPASS='adminpass'
 DEFAULT_CONTAINER_NEXTCLOUD_DB_IMAGE='mariadb'
-DEFAULT_CONTAINER_NEXTCLOUD_DB_VERSION='latest'
+DEFAULT_CONTAINER_NEXTCLOUD_DB_VERSION='10.5'
 DEFAULT_CONTAINER_NEXTCLOUD_DB_DATABASE='nextcloud'
 DEFAULT_CONTAINER_NEXTCLOUD_DB_PREFIX='nx_'
 DEFAULT_CONTAINER_NEXTCLOUD_DB_USERNAME='nextcloud'
