--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ DEFAULT_PCS_AUTOINSTALL=1
 DEFAULT_PCS_DEVICE_NAME='/dev/sdb'
 DEFAULT_PCS_DEVICE_UNIT=1
 DEFAULT_PCS_DEVICE_MOUNT_PATH='/mnt/containers/'
+DEFAULT_PCS_DEVICE_BACKUP_PATH='/mnt/containers/backups/'
 
 DEFAULT_CONTAINER_WEBPROXY_AUTOINSTALL=1
 DEFAULT_CONTAINER_WEBPROXY_GIT='https://github.com/goodchip/nginx-proxy-automation.git'
@@ -28,12 +29,15 @@ DEFAULT_CONTAINER_WEBPROXY_IP=0.0.0.0
 DEFAULT_CONTAINER_WEBPROXY_NETWORK='proxy'
 
 DEFAULT_CONTAINER_WORDPRESS_AUTOINSTALL=1
+DEFAULT_CONTAINER_WORDPRESS_AUTOBACKUP=1
 DEFAULT_CONTAINER_WORDPRESS_GIT='https://github.com/goodchip/docker-wordpress.git'
 DEFAULT_CONTAINER_WORDPRESS_NAME='wordpress'
 DEFAULT_CONTAINER_WORDPRESS_LOGSMAXSIZE='200k'
 DEFAULT_CONTAINER_WORDPRESS_SITE_DOMAINS='domain.tld,www.domain.tld'
 DEFAULT_CONTAINER_WORDPRESS_SITE_IMAGE='wordpress'
 DEFAULT_CONTAINER_WORDPRESS_SITE_VERSION='5.8.1'
+DEFAULT_CONTAINER_WORDPRESS_SITE_SOURCEDIR='data/site/'
+DEFAULT_CONTAINER_WORDPRESS_SITE_EXCLUDEDIRS=''
 DEFAULT_CONTAINER_WORDPRESS_DB_IMAGE='mariadb'
 DEFAULT_CONTAINER_WORDPRESS_DB_VERSION='10.5'
 DEFAULT_CONTAINER_WORDPRESS_DB_DATABASE='wordpress'
@@ -43,6 +47,7 @@ DEFAULT_CONTAINER_WORDPRESS_DB_USERPASS='userpass'
 DEFAULT_CONTAINER_WORDPRESS_DB_ROOTPASS='rootpass'
 
 DEFAULT_CONTAINER_NEXTCLOUD_AUTOINSTALL=1
+DEFAULT_CONTAINER_NEXTCLOUD_AUTOBACKUP=1
 DEFAULT_CONTAINER_NEXTCLOUD_GIT='https://github.com/goodchip/docker-nextcloud-letsencrypt.git'
 DEFAULT_CONTAINER_NEXTCLOUD_NAME='nextcloud'
 DEFAULT_CONTAINER_NEXTCLOUD_SITE_DOMAINS='cloud.domain.tld'
