Allow to set other path if not use PCS

--- a/.env.example
+++ b/.env.example
@@ -8,18 +8,22 @@
 #                                            #
 ##############################################
 
+
+
 DEFAULT_PCI_OS_AUTOINSTALL=1
 DEFAULT_PCI_OS_DISTRIBUTION='debian10'
 
 DEFAULT_PCI_DOCKER_AUTOINSTALL=1
 DEFAULT_PCI_DOCKER_COMPOSE_VERSION=1.19.0
 DEFAULT_PCI_DOCKER_COMPOSE_PATH='/usr/local/bin/docker-compose'
+DEFAULT_PCI_INSTALL_PATH='/mnt/containers/' # or '~/' by example if you want install on PCI without PCS
+DEFAULT_PCI_BACKUP_PATH='/mnt/containers/backups/' # or '~/backups/' by example if you want install on PCI without PCS
 
 DEFAULT_PCS_AUTOINSTALL=1
 DEFAULT_PCS_DEVICE_NAME='/dev/sdb'
 DEFAULT_PCS_DEVICE_UNIT=1
-DEFAULT_PCS_DEVICE_MOUNT_PATH='/mnt/containers/'
-DEFAULT_PCS_DEVICE_BACKUP_PATH='/mnt/containers/backups/'
+DEFAULT_PCS_DEVICE_MOUNT_PATH=$DEFAULT_PCI_INSTALL_PATH
+DEFAULT_PCS_DEVICE_BACKUP_PATH=$DEFAULT_PCI_BACKUP_PATH
 
 DEFAULT_CONTAINER_WEBPROXY_AUTOINSTALL=1
 DEFAULT_CONTAINER_WEBPROXY_GIT='https://github.com/goodchip/nginx-proxy-automation.git'
@@ -31,6 +35,7 @@ DEFAULT_CONTAINER_WEBPROXY_NETWORK='proxy'
 DEFAULT_CONTAINER_WORDPRESS_AUTOINSTALL=1
 DEFAULT_CONTAINER_WORDPRESS_AUTOBACKUP=1
 DEFAULT_CONTAINER_WORDPRESS_GIT='https://github.com/goodchip/docker-wordpress.git'
+DEFAULT_CONTAINER_WORDPRESS_PATH=$DEFAULT_PCI_INSTALL_PATH
 DEFAULT_CONTAINER_WORDPRESS_NAME='wordpress'
 DEFAULT_CONTAINER_WORDPRESS_LOGSMAXSIZE='200k'
 DEFAULT_CONTAINER_WORDPRESS_SITE_DOMAINS='domain.tld,www.domain.tld'
@@ -49,6 +54,7 @@ DEFAULT_CONTAINER_WORDPRESS_DB_ROOTPASS='rootpass'
 DEFAULT_CONTAINER_NEXTCLOUD_AUTOINSTALL=1
 DEFAULT_CONTAINER_NEXTCLOUD_AUTOBACKUP=1
 DEFAULT_CONTAINER_NEXTCLOUD_GIT='https://github.com/goodchip/docker-nextcloud-letsencrypt.git'
+DEFAULT_CONTAINER_NEXTCLOUD_PATH=$DEFAULT_PCI_INSTALL_PATH
 DEFAULT_CONTAINER_NEXTCLOUD_NAME='nextcloud'
 DEFAULT_CONTAINER_NEXTCLOUD_SITE_DOMAINS='cloud.domain.tld'
 DEFAULT_CONTAINER_NEXTCLOUD_SITE_IMAGE='nextcloud'
